--- a/1.8/metrics-server-deployment.yaml
+++ b/1.8/metrics-server-deployment.yaml
@@ -37,4 +37,18 @@ spec:
         volumeMounts:
         - name: tmp-dir
           mountPath: /tmp
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: wordpress-deployment
+  namespace: wordpress-ns
+spec:
+  maxReplicas: 10
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: wordpress-deployment
+  targetCPUUtilizationPercentage: 60
 
